--- a/README
+++ b/README
@@ -23,7 +23,7 @@ Battleships starts by giving instructions to choose your ship positions, with te
 
 When all 3 ships have been placed, aim the UC fun kit at your opponent and press the navswitch in to start the game between you and your opponent once they have finished.
 
-The turns will then start, with the first person to finish placing their ships starting off by shooting a missile. The missile can be moved in the same way as the ships, and pressing in the navswitch will fire the missile at the opponent. If the missile coordinates match the coordinates of a part of a ship on the opponent's screen, then that ship is sunk. 
+The turns will then start, with the first person to finish placing their ships starting off by shooting a missile. The missile can be moved in the same way as the ships, and pressing the white button at the front of the board will fire the missile at the opponent. If the missile coordinates match the coordinates of a part of a ship on the opponent's screen, then that ship is sunk. 
 
 The screens will then swap, with the opponent firing the missile at your ships. This will continue until one player is out of ships, in which case the other player wins.
 
