add group number

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 # BATTLESHIPS
+## GROUP_509
 
 By running 'make program' in this directory with a University of Canterbury fun kit v4 plugged into a usb port, the game battleships 
 will be uploaded.
